maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: '=' expected but identifier found.
def remplissageCase(x:Int,y:Int,i:Int):={
                                      ^JediEscaper:18: error: illegal start of simple expression
override def run() {
^